--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "./src/index.tsx",
   "agora_electron": {
     "electron_version": "5.0.8",
-    "prebuilt": true,
-    "platform": "darwin"
+    "prebuilt": true
   },
   "dmg": {
     "compression": "store",
@@ -134,8 +133,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
-    "@netless/white-audio-plugin": "1.1.4",
-    "@netless/white-video-plugin": "1.1.10",
+    "@netless/white-audio-plugin": "1.1.9",
+    "@netless/white-video-plugin": "1.1.16",
     "@types/ali-oss": "^6.0.4",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.145",
