--- a/package.json
+++ b/package.json
@@ -133,8 +133,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
-    "@netless/white-audio-plugin": "1.1.9",
-    "@netless/white-video-plugin": "1.1.16",
+    "@netless/white-audio-plugin": "^1.1.10",
+    "@netless/white-video-plugin": "^1.1.17",
     "@types/ali-oss": "^6.0.4",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.145",
