--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agora-edu-web",
   "version": "5.0.0",
   "private": true,
-  "homepage": "/live_education",
+  "homepage": "/live",
   "main": "./src/index.tsx",
   "agora_electron": {
     "electron_version": "5.0.8",
