--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@netless/react-seek-slider": "^1.0.4",
+    "@netless/white-audio-plugin": "^1.1.10",
+    "@netless/white-video-plugin": "^1.1.17",
     "agora-electron-sdk": "2.9.1-beta.4",
     "agora-rtc-sdk": "3.0.0",
     "agora-rtm-sdk": "1.2.2",
@@ -95,12 +97,11 @@
     "react-draggable": "^4.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-use": "^13.24.0",
     "rxjs": "^6.5.3",
     "typescript": "^3.6.4",
     "uuid": "^3.3.3",
-    "white-web-sdk": "2.6.0",
-    "@netless/white-audio-plugin": "^1.1.10",
-    "@netless/white-video-plugin": "^1.1.17"
+    "white-web-sdk": "^2.6.3"
   },
   "scripts": {
     "electron": "cross-env REACT_APP_RUNTIME_PLATFORM=electron ELECTRON_START_URL=http://localhost:3000 concurrently \"npm run electron:web\" \"wait-on http://localhost:3000 && npm run electron:client\"",
@@ -150,7 +151,6 @@
     "electron": "5.0.8",
     "electron-builder": "^21.2.0",
     "react-app-rewired": "^2.1.4",
-    "react-use": "^13.24.0",
     "source-map-support": "^0.5.16",
     "wait-on": "^3.3.0"
   }
