--- a/education_iOS/AgoraEducation/Supporting Files/Info.plist
+++ b/education_iOS/AgoraEducation/Supporting Files/Info.plist
@@ -26,9 +26,9 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>App needs your permission to access camera</string>
+	<string>App needs your permission to access camera for video interaction</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>App needs your permission to access microphone</string>
+	<string>App needs your permission to access microphone for audio interaction</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
