--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "electron:copy:electron": "cpx ./app/**/*.js ./build",
     "electron:build": "npm run electron:copy:web && npm run electron:copy:electron",
     "dev": "cross-env REACT_APP_RUNTIME_PLATFORM=web react-app-rewired start",
-    "build": "cross-env REACT_APP_RUNTIME_PLATFORM=web react-app-rewired build",
+    "build": "cross-env ENV=production REACT_APP_RUNTIME_PLATFORM=web react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "eject": "react-scripts eject",
