fix replay error bug

--- a/education_iOS/Podfile
+++ b/education_iOS/Podfile
@@ -1,5 +1,6 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '10.0'
 
 target 'AgoraEducation' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -9,5 +10,6 @@ target 'AgoraEducation' do
   pod 'Whiteboard', '2.6.4'
   pod 'AgoraRtcEngine_iOS', '2.9.0.102'
   pod 'AgoraRtm_iOS', '~> 1.2.2'
+  
 end
 
