--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "agora-edu-web",
+  "name": "Agora-Edu-Web",
   "version": "5.2.0",
   "private": true,
-  "homepage": "/education_web",
+  "homepage": "/",
   "main": "./src/index.tsx",
   "agora_electron": {
     "electron_version": "5.0.8",
@@ -77,6 +77,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "white-web-sdk": "^2.6.4",
     "@netless/react-seek-slider": "^1.0.4",
     "@netless/white-audio-plugin": "^1.1.10",
     "@netless/white-video-plugin": "^1.1.17",
@@ -100,8 +101,7 @@
     "react-use": "^13.24.0",
     "rxjs": "^6.5.3",
     "typescript": "^3.6.4",
-    "uuid": "^3.3.3",
-    "white-web-sdk": "^2.6.3"
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "electron": "cross-env REACT_APP_RUNTIME_PLATFORM=electron ELECTRON_START_URL=http://localhost:3000 concurrently \"npm run electron:web\" \"wait-on http://localhost:3000 && npm run electron:client\"",
