--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ REACT_APP_AGORA_OSS_BUCKET_KEY=your_bucket_ak
 REACT_APP_AGORA_OSS_BUCKET_SECRET=your_bucket_sk
 REACT_APP_AGORA_EDU_ENDPOINT_PREFIX=agora_open_edu_api_prefix
 REACT_APP_AGORA_EDU_ENDPOINT=agora_open_edu_proxy_api
+REACT_APP_AGORA_OSS_CDN_ACCELERATE=your_cdn_accelerate_endpoint
