--- a/package.json
+++ b/package.json
@@ -77,16 +77,19 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
-    "white-web-sdk": "^2.6.4",
     "@netless/react-seek-slider": "^1.0.4",
     "@netless/white-audio-plugin": "^1.1.10",
     "@netless/white-video-plugin": "^1.1.17",
+    "@types/axios": "^0.14.0",
+    "@types/ua-parser-js": "^0.7.33",
     "agora-electron-sdk": "2.9.1-beta.4",
     "agora-rtc-sdk": "3.0.0",
     "agora-rtm-sdk": "1.2.2",
     "ali-oss": "^6.3.1",
+    "axios": "^0.19.2",
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
+    "dexie": "^2.0.4",
     "immutable": "^4.0.0-rc.12",
     "js-md5": "^0.7.3",
     "lodash": "^4.17.15",
@@ -101,7 +104,10 @@
     "react-use": "^13.24.0",
     "rxjs": "^6.5.3",
     "typescript": "^3.6.4",
-    "uuid": "^3.3.3"
+    "ua-parser-js": "^0.7.21",
+    "uuid": "^3.3.3",
+    "white-web-sdk": "^2.6.4",
+    "worker-loader": "^2.0.0"
   },
   "scripts": {
     "electron": "cross-env REACT_APP_RUNTIME_PLATFORM=electron ELECTRON_START_URL=http://localhost:3000 concurrently \"npm run electron:web\" \"wait-on http://localhost:3000 && npm run electron:client\"",
