--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Agora-Edu-Web",
-  "version": "5.2.0",
+  "version": "5.2.1",
   "private": true,
-  "homepage": "/",
+  "homepage": "/education_web",
   "main": "./src/index.tsx",
   "agora_electron": {
     "electron_version": "5.0.8",
@@ -145,11 +145,13 @@
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.145",
     "@types/node": "^12.12.22",
+    "@types/raf": "^3.4.0",
     "@types/react": "^16.9.9",
     "@types/react-color": "^3.0.1",
     "@types/react-dom": "^16.9.2",
     "@types/react-router-dom": "^5.1.0",
     "@types/uuid": "^3.4.6",
+    "@types/video.js": "^7.3.4",
     "babel-plugin-import": "^1.13.0",
     "cpx": "^1.5.0",
     "customize-cra": "^0.8.0",
@@ -158,6 +160,7 @@
     "electron-builder": "^21.2.0",
     "react-app-rewired": "^2.1.4",
     "source-map-support": "^0.5.16",
+    "video.js": "^7.7.5",
     "wait-on": "^3.3.0"
   }
 }
