--- a/cicd/templates/build-android.yml
+++ b/cicd/templates/build-android.yml
@@ -16,7 +16,7 @@ jobs:
       - bash: python ci.env.py
         env:
           configFile: 'app/src/normal/res/values/string_configs.xml'
-          configMap: '{"YOUR APP ID":"$(agora.premiumBroadAppId)}'
+          configMap: '{"YOUR APP ID":"$(agora.premiumBroadAppId)"}'
         workingDirectory: ${{ parameters.workingDirectory }}
 
       - bash: |
