--- a/cicd/templates/build-android.yml
+++ b/cicd/templates/build-android.yml
@@ -14,6 +14,9 @@ jobs:
 
     steps:
       - bash: python ci.env.py
+        env:
+          configFile: 'app/src/normal/res/values/string_configs.xml'
+          configMap: '{"YOUR APP ID":"$(agora.premiumBroadAppId)"}'
         workingDirectory: ${{ parameters.workingDirectory }}
 
       - bash: |
