--- a/cicd/templates/build-ios.yml
+++ b/cicd/templates/build-ios.yml
@@ -29,7 +29,7 @@ jobs:
         inputs:
           provProfileSecureFile: 'AgoraAppsDevProfile.mobileprovision'
 
-      - script: cd ${{ parameters.workingDirectory }} && chmod +x build-dev.sh && ./build-qa.sh agora.pgyer_iOS_uKey agora.pgyer_iOS_apiKey
+      - script: cd ${{ parameters.workingDirectory }} && chmod +x build-dev.sh && ./build-dev.sh agora.pgyer_iOS_uKey agora.pgyer_iOS_apiKey
 
       - script: cd ${{ parameters.workingDirectory }} && mkdir app && mv AgoraEducationDev.ipa app && mv AgoraEducationDev.xcarchive app
 
