--- a/cicd/templates/build-ios.yml
+++ b/cicd/templates/build-ios.yml
@@ -30,7 +30,7 @@ jobs:
           provProfileSecureFile: 'AgoraAppsDevProfile.mobileprovision'
 
       
-      - script: cd ${{ parameters.workingDirectory }} && chmod +x build-dev.sh && ./build-dev.sh agora.pgyer_iOS_welfare_uKey agora.pgyer_iOS_welfare_apiKey
+      - script: cd ${{ parameters.workingDirectory }} && chmod +x build-dev.sh && ./build-dev.sh $(agora.pgyer_iOS_welfare_uKey) $(agora.pgyer_iOS_welfare_apiKey)
 
       - script: cd ${{ parameters.workingDirectory }} && mkdir app && mv AgoraEducationDev.ipa app && mv AgoraEducationDev.xcarchive app
 
