--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "Agora-Edu-Web",
   "version": "5.3.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "./education_web",
+  "sideEffects": false,
   "main": "./src/index.tsx",
   "agora_electron": {
     "electron_version": "5.0.8",
@@ -106,7 +107,7 @@
     "typescript": "^3.6.4",
     "ua-parser-js": "^0.7.21",
     "uuid": "^3.3.3",
-    "white-web-sdk": "^2.6.4",
+    "white-web-sdk": "^2.7.5",
     "worker-loader": "^2.0.0"
   },
   "scripts": {
@@ -158,7 +159,9 @@
     "devtron": "^1.4.0",
     "electron": "5.0.8",
     "electron-builder": "^21.2.0",
+    "eruda": "^2.2.1",
     "react-app-rewired": "^2.1.4",
+    "react-gtm-module": "^2.0.8",
     "source-map-support": "^0.5.16",
     "video.js": "^7.7.5",
     "wait-on": "^3.3.0"
