--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Agora-Edu-Web",
   "version": "5.3.0",
   "private": true,
-  "homepage": "./education_web",
+  "homepage": ".",
   "sideEffects": false,
   "main": "./src/index.tsx",
   "agora_electron": {
