Squashed commit of the following:
commit 038473b9b5094dbf9331966e7cc44e976854f03f
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Fri Apr 17 14:50:03 2020 +0800

    add debug log

commit 0da0e7012820911cdf10d450c9bf0e959df060da
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Fri Apr 17 00:00:51 2020 +0800

    fix. typo

commit def3863c9003b037bcd9ed5856da33faa7f09fe2
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Thu Apr 16 23:55:41 2020 +0800

    chore. add refresh token

commit 137fe96a4f53e52932103e57b424c0e43750c7d7
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Thu Apr 16 23:51:37 2020 +0800

    chore. add debug tool

commit edfdebc3ae2b1a1b5eb599a08800bb1f9c22c7af
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Tue Apr 14 13:24:44 2020 +0800

    fix. mui version

commit 3f325f3b896c75c708a8f05d3154c0d7e2bab54d
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Tue Mar 31 21:52:40 2020 +0800

    chore. upgrade to 5.2.1

commit 6f66fa6e22c714fb659c398814e575940920dac8
Merge: af78613 d7f1133
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Thu Mar 19 16:32:15 2020 +0800

    merge

commit d7f113326630527c2133a5cf4bc94d7c1e0d895e
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Thu Mar 19 11:51:29 2020 +0800

    fix. autoplay

commit 7ccf6a72f9dd4c306514ff6b37b3547f38c8edba
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Wed Mar 18 16:07:35 2020 +0800

    fix. autoplay

commit 976ec5571db8c2157aa2c6820111c2256e27b3e8
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Wed Mar 18 16:02:49 2020 +0800

    fix. autoplay

commit e0f10bba68315e3f759cbdcd2d0ebd49878f5211
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Wed Mar 18 14:48:18 2020 +0800

    fix. language & advance syntax

commit af78613c6ce57c7936334fc4fb2d8307d254198c
Author: matrixbirds <yooobuntu@gmail.com>
Date:   Sat Mar 14 19:25:56 2020 +0800

    Merge commit 'ffc00a238d380176336a1f9a82bdd09ab38e9a95' into dev/5.2.0-welfare-develop

commit d2d345cba5a863c3dad9b64ac92bccdd8c64ba

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ REACT_APP_AGORA_OSS_BUCKET_FOLDER=your_oss_bucket_folder
 REACT_APP_AGORA_OSS_BUCKET_REGION=your_bucket_region
 REACT_APP_AGORA_OSS_BUCKET_KEY=your_bucket_ak
 REACT_APP_AGORA_OSS_BUCKET_SECRET=your_bucket_sk
+REACT_APP_AGORA_EDU_ENDPOINT_PREFIX=agora_open_edu_api_prefix
+REACT_APP_AGORA_EDU_ENDPOINT=agora_open_edu_proxy_api
+REACT_APP_AGORA_OSS_CDN_ACCELERATE=your_cdn_accelerate_endpoint
