--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "5.3.0",
   "private": true,
   "homepage": ".",
+  "sideEffects": false,
   "main": "./src/index.tsx",
   "agora_electron": {
     "electron_version": "5.0.8",
@@ -78,6 +79,8 @@
     "@material-ui/core": "4.9.1",
     "@material-ui/icons": "4.9.1",
     "@netless/react-seek-slider": "^1.0.4",
+    "@netless/white-audio-plugin": "^1.1.10",
+    "@netless/white-video-plugin": "^1.1.17",
     "@types/axios": "^0.14.0",
     "@types/ua-parser-js": "^0.7.33",
     "agora-electron-sdk": "2.9.1-beta.4",
@@ -104,9 +107,7 @@
     "typescript": "^3.6.4",
     "ua-parser-js": "^0.7.21",
     "uuid": "^3.3.3",
-    "white-web-sdk": "2.6.4",
-    "@netless/white-audio-plugin": "^1.1.10",
-    "@netless/white-video-plugin": "^1.1.17",
+    "white-web-sdk": "^2.7.5",
     "worker-loader": "^2.0.0"
   },
   "scripts": {
@@ -163,7 +164,6 @@
     "react-gtm-module": "^2.0.8",
     "source-map-support": "^0.5.16",
     "video.js": "^7.7.5",
-    "wait-on": "^3.3.0",
-    "white-web-sdk": "^2.7.5"
+    "wait-on": "^3.3.0"
   }
 }
