--- a/cicd/templates/build-ios.yml
+++ b/cicd/templates/build-ios.yml
@@ -12,13 +12,18 @@ jobs:
       vmImage: 'macos-latest'
 
     variables:
-      - group: AgoraKeys
+      - group: Edu
 
     steps:
-      - script: cd ${{ parameters.workingDirectory }} && ls && python ci.env.py
+      - script: cd ${{ parameters.workingDirectory }} && ls && python ci.env.py $(env)
         env:
-          AGORA_APP_ID: $(agora.premiumBroadAppId)
-          WHITE_BOARD_TOKEN: $(agora.whiteBoardToken)
+          appId_demo: $(appId.demo)
+          appId_pre: $(appId.appId_pre)
+          appId_release: $(appId.release)
+          auth: $(auth.demo)
+          host_debug: $(host.debug)
+          host_pre: $(host.pre)
+          host_release: $(host.release)
 
       - task: InstallAppleCertificate@2
         inputs:
@@ -29,8 +34,7 @@ jobs:
         inputs:
           provProfileSecureFile: 'AgoraAppsDevProfile.mobileprovision'
 
-      
-      - script: cd ${{ parameters.workingDirectory }} && chmod +x build-dev.sh && ./build-dev.sh
+      - script: cd ${{ parameters.workingDirectory }} && chmod +x build-dev.sh && ./build-dev.sh $(ukey) $(apikey)
 
       - script: cd ${{ parameters.workingDirectory }} && mkdir app && mv AgoraEducationDev.ipa app && mv AgoraEducationDev.xcarchive app
 
@@ -39,9 +43,9 @@ jobs:
           PathtoPublish: ${{ parameters.workingDirectory }}/app
           ArtifactName: ${{ parameters.devDisplayName }}
 
-      - template: github-release.yml
-        parameters:
-          displayName: ${{ parameters.devDisplayName }}
+#      - template: github-release.yml
+#        parameters:
+#          displayName: ${{ parameters.devDisplayName }}
 
                 
   - job: ${{ parameters.qaDisplayName }}Build
@@ -51,13 +55,18 @@ jobs:
       vmImage: 'macos-latest'
 
     variables:
-      - group: AgoraKeys
+      - group: Edu
 
     steps:
-      - script: cd ${{ parameters.workingDirectory }} && ls && python ci.env.py
+      - script: cd ${{ parameters.workingDirectory }} && ls && python ci.env.py $(env)
         env:
-          AGORA_APP_ID: $(agora.premiumBroadAppId)
-          WHITE_BOARD_TOKEN: $(agora.whiteBoardToken)
+          appId_demo: $(appId.demo)
+          appId_pre: $(appId.appId_pre)
+          appId_release: $(appId.release)
+          auth: $(auth.demo)
+          host_debug: $(host.debug)
+          host_pre: $(host.pre)
+          host_release: $(host.release)
 
       - task: InstallAppleCertificate@2
         inputs:
@@ -69,7 +78,7 @@ jobs:
           provProfileSecureFile:
               'AgoraIOTest2019.mobileprovision'
       
-      - script: cd ${{ parameters.workingDirectory }} && chmod +x build-qa.sh && ./build-qa.sh
+      - script: cd ${{ parameters.workingDirectory }} && chmod +x build-qa.sh && ./build-qa.sh $(ukey) $(apikey)
 
       - script: cd ${{ parameters.workingDirectory }} && mkdir app && mv AgoraEducationQA.ipa app && mv AgoraEducationQA.xcarchive app
 
@@ -78,6 +87,6 @@ jobs:
           PathtoPublish: ${{ parameters.workingDirectory }}/app
           ArtifactName: ${{ parameters.qaDisplayName }}
 
-      - template: github-release.yml
-        parameters:
-          displayName: ${{ parameters.qaDisplayName }}
+#      - template: github-release.yml
+#        parameters:
+#          displayName: ${{ parameters.qaDisplayName }}
