chore. upgrade web education

--- a/education_web/package.json
+++ b/education_web/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "agora-edu-web",
-  "version": "5.1.1",
+  "name": "Agora-Edu-Web",
+  "version": "5.4.0",
   "private": true,
   "homepage": ".",
+  "sideEffects": false,
   "main": "./src/index.tsx",
   "agora_electron": {
-    "electron_version": "5.0.8",
+    "platform": "darwin",
+    "electron_version": "7.1.2",
     "prebuilt": true
   },
   "dmg": {
@@ -75,38 +77,14 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "4.9.1",
-    "@material-ui/icons": "4.9.1",
-    "@netless/react-seek-slider": "^1.0.4",
-    "agora-electron-sdk": "2.9.1-beta.4",
-    "agora-rtc-sdk": "3.0.0",
-    "agora-rtm-sdk": "1.2.2",
-    "ali-oss": "^6.3.1",
-    "concurrently": "^5.0.0",
-    "cross-env": "^6.0.3",
-    "immutable": "^4.0.0-rc.12",
-    "js-md5": "^0.7.3",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.10.2",
-    "react-color": "2.17.3",
-    "react-dom": "^16.10.2",
-    "react-draggable": "^4.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "rxjs": "^6.5.3",
-    "typescript": "^3.6.4",
-    "uuid": "^3.3.3",
-    "white-web-sdk": "2.6.4",
-    "@netless/white-audio-plugin": "^1.1.10",
-    "@netless/white-video-plugin": "^1.1.17"
+    "adm-zip": "^0.4.14",
+    "agora-electron-sdk": "^2.9.0-rc.104"
   },
   "scripts": {
     "electron": "cross-env REACT_APP_RUNTIME_PLATFORM=electron ELECTRON_START_URL=http://localhost:3000 concurrently \"npm run electron:web\" \"wait-on http://localhost:3000 && npm run electron:client\"",
     "electron:client": "cross-env electron ./app/",
     "electron:web": "cross-env BROWSER=none react-app-rewired start",
-    "electron:copy:web": "cross-env REACT_APP_RUNTIME_PLATFORM=electron react-app-rewired build",
+    "electron:copy:web": "cross-env ENV=production REACT_APP_RUNTIME_PLATFORM=electron react-app-rewired build",
     "electron:copy:electron": "cpx ./app/**/*.js ./build",
     "electron:build": "npm run electron:copy:web && npm run electron:copy:electron",
     "dev": "cross-env REACT_APP_RUNTIME_PLATFORM=web react-app-rewired start",
@@ -134,24 +112,62 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@material-ui/core": "4.9.1",
+    "@material-ui/icons": "4.9.1",
+    "@netless/react-seek-slider": "^1.0.4",
+    "@netless/white-audio-plugin": "^1.1.10",
+    "@netless/white-video-plugin": "^1.1.17",
     "@types/ali-oss": "^6.0.4",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.145",
     "@types/node": "^12.12.22",
+    "@types/raf": "^3.4.0",
     "@types/react": "^16.9.9",
     "@types/react-color": "^3.0.1",
     "@types/react-dom": "^16.9.2",
     "@types/react-router-dom": "^5.1.0",
+    "@types/ua-parser-js": "^0.7.33",
     "@types/uuid": "^3.4.6",
+    "@types/video.js": "^7.3.4",
+    "agora-rtc-sdk": "3.0.0",
+    "agora-rtm-sdk": "1.2.2",
+    "ali-oss": "^6.3.1",
+    "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "backtrace-node": "^1.0.6",
+    "concurrently": "^5.0.0",
     "cpx": "^1.5.0",
+    "cross-env": "^6.0.3",
     "customize-cra": "^0.8.0",
     "devtron": "^1.4.0",
-    "electron": "5.0.8",
-    "electron-builder": "^21.2.0",
+    "dexie": "^2.0.4",
+    "electron": "^7.1.14",
+    "electron-builder": "22.5.1",
+    "eruda": "^2.2.1",
+    "immutable": "^4.0.0-rc.12",
+    "js-md5": "^0.7.3",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
+    "react": "^16.10.2",
     "react-app-rewired": "^2.1.4",
+    "react-color": "2.17.3",
+    "react-dom": "^16.10.2",
+    "react-draggable": "^4.2.0",
+    "react-gtm-module": "^2.0.8",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
     "react-use": "^13.24.0",
+    "rxjs": "^6.5.3",
     "source-map-support": "^0.5.16",
-    "wait-on": "^3.3.0"
+    "typescript": "^3.6.4",
+    "ua-parser-js": "^0.7.21",
+    "uuid": "^3.3.3",
+    "video.js": "^7.7.5",
+    "wait-on": "^3.3.0",
+    "white-web-sdk": "2.7.5",
+    "worker-loader": "^2.0.0",
+    "zlib": "^1.0.5"
   }
 }
