Squashed 'education_Android/AgoraEducation/' changes from caf9519..0365c13
0365c13 update
413b678 Merge branch 'dev/5.4.0' into dev/5.4.0-welfare
ee157f5 update readme
b9a94a9 remove board host
646e7a2 fix build bug
ed6d4cd fix build bug
5eecd8b add preRelease
d3575a4 Merge branch 'dev/5.4.0' into dev/5.4.0-welfare
45e2282 update api host

git-subtree-dir: education_Android/AgoraEducation
git-subtree-split: 0365c1331e939d0b8cf5da7e71ed8a299762d6e8

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField 'String', 'API_BASE_URL', '"https://solutions-api.sh.agoralab.co/"'
+        buildConfigField 'String', 'API_BASE_URL', '"https://api.agora.io"'
         buildConfigField 'String', 'POLICY_URL', '"https://www.agora.io/privacy-policy"'
     }
 
@@ -34,13 +34,18 @@ android {
         debug {
             minifyEnabled false
             applicationIdSuffix ".debug"
-            buildConfigField 'String', 'API_BASE_URL', '"https://api-solutions-dev.sh.agoralab.co/"'
+            buildConfigField 'String', 'API_BASE_URL', '"https://api-solutions-dev.sh.agoralab.co"'
         }
         release {
             minifyEnabled true
             shrinkResources true
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        releasePre {
+            matchingFallbacks = ['release']
+            signingConfig signingConfigs.release
+            buildConfigField 'String', 'API_BASE_URL', '"https://api-test.agora.io"'
         }
     }
 
