fix. electron version

--- a/education_web/package.json
+++ b/education_web/package.json
@@ -143,7 +143,7 @@
     "customize-cra": "^0.8.0",
     "devtron": "^1.4.0",
     "dexie": "^2.0.4",
-    "electron": "^7.1.14",
+    "electron": "7.1.14",
     "electron-builder": "22.5.1",
     "eruda": "^2.2.1",
     "eslint-plugin-react": "^7.20.0",
