--- a/education_web/.env.example
+++ b/education_web/.env.example
@@ -7,6 +7,7 @@ REACT_APP_AGORA_CUSTOMER_CERTIFICATE=customer_certificate
 REACT_APP_AGORA_RTM_ENDPOINT=your_server_rtm_endpoint_api
 REACT_APP_AGORA_EDU_ENDPOINT_PREFIX=https://api.agora.io/edu
 
+REACT_APP_NETLESS_APP_ID=netless_app_id
 REACT_APP_YOUR_BACKEND_WHITEBOARD_API=https://api.agora.io/edu/v1/apps/%app_id%/room/%room_id%/board
 
 REACT_APP_AGORA_RESTFULL_TOKEN=agora_restful_api_token
