--- a/education_web/package.json
+++ b/education_web/package.json
@@ -114,8 +114,8 @@
     "@material-ui/core": "4.9.1",
     "@material-ui/icons": "4.9.1",
     "@netless/react-seek-slider": "^1.0.4",
-    "@netless/white-audio-plugin": "^1.1.10",
-    "@netless/white-video-plugin": "^1.1.17",
+    "@netless/white-audio-plugin": "^1.2.15",
+    "@netless/white-video-plugin": "^1.2.15",
     "@types/ali-oss": "^6.0.4",
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.19",
@@ -174,7 +174,7 @@
     "video.js": "^7.7.5",
     "wait-on": "^3.3.0",
     "webpack-bundle-analyzer": "^3.8.0",
-    "white-web-sdk": "2.7.5",
+    "white-web-sdk": "^2.9.12",
     "worker-loader": "^2.0.0",
     "zlib": "^1.0.5"
   }
